@@ -1,7 +1,9 @@
+-Make sure active set is highlighted when starting 'Activate cards' dialog.
+-cntrl+R replays media, just like in 1.x.
 -When editing or previewing cards from the card browser, PageUp/PageDown can
  be used to move to the previous/next card
 -Make it easier to change active card sets using keyboard only
- (cntr-D, arrow keys, enter).
+ (cntrl-D, arrow keys, enter).
 -Question and answer fields in the review widget can now be scrolled
  using PageUp and PageDown.
 -Grade buttons can now be used as a shortcut for 'show answer'
